# poly-dpg-project

./: .gitignore  .pre-commit-config.yaml  LICENSE  README-pl.md  README.md  create_hypergraph.py  create_hypergraph_g4.py  create_hypergraph_g5.py  generate_report.py  main.py  pyproject.toml  reproduce_sequence.py  run_derivation_g4.py  run_derivation_g5.py
src/: elements.py  graph.py  main.py
src/eductions/: eduction8.py
src/productions/: p0.py  p1.py  p10.py  p11.py  p12.py  p13.py  p14.py  p2.py  p3.py  p4.py  p5.py  p6.py  p7.py  p8.py  p9.py  production.py
src/utils/: visualization.py
tests/: graphs.py
tests/test_p0/: __init__.py  a.py  b.py  from_presentation.py  hexagonal.py  test_from_presentation.py  test_hexagonal.py
tests/test_p1/: __init__.py  test_p1.py
tests/test_p10/: test_p10.py
tests/test_p11/: test_p11.py
tests/test_p12/: test_p12.py
tests/test_p13/: test_p13.py
tests/test_p14/: test_p14.py
tests/test_p2/: test_p2.py  test_p2_large.py
tests/test_p3/: test_p3.py
tests/test_p4/: test_p4.py
tests/test_p5/: test_p5.py
tests/test_p6/: test_p6.py  test_p6_large.py
tests/test_p7/: test_p7.py
tests/test_p8/: test_p8.py
tests/test_p9/: test_p9.py
wywody/: wywod5.py
