[project]
name = "poly-dpg-project"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14.1"
dependencies = [
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "pytest>=9.0.2",
]

[tool.poetry]
package-mode = false

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
]
